# exif

./: CMakeLists.txt
exif/: actions.c  exif-i18n.c  main.c  utils.c
libjpeg/: jpeg-data.c  jpeg-data.h  jpeg-marker.c
